# adventofcode2016

./: LICENSE  README.md  adventofcode2016.cabal
src/: Lib.hs
src/Eighteen/: Main.hs
src/Five/: Main.hs
src/Four/: Main.hs
src/Nineteen/: Main.hs
src/One/: Main.hs
src/Seven/: Main.hs
src/Seventeen/: Main.hs
src/Six/: Main.hs
src/Sixteen/: Main.hs
src/Three/: Main.hs
src/Twelve/: Main.hs
src/Twenty/: Main.hs
src/TwentyFive/: Main.hs  inputo.txt
src/TwentyThree/: Main.hs
src/TwentyTwo/: Main.hs  input2.txt
src/Two/: Main.hs
