name:                adventofcode2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/shapr/adventofcode2016#readme
license:             BSD3
license-file:        LICENSE
author:              Shae Erisson
maintainer:          shae@ScannedInAvian.com
copyright:           BSD3
category:            fun
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers >= 0.5.7.1
                     , parsec >= 3.1.11
                     , split
                     , megaparsec
  default-language:    Haskell2010

executable AdventOne
  hs-source-dirs:      src/One
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , split
  default-language:    Haskell2010

executable AdventTwo
  hs-source-dirs:      src/Two
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , split
  default-language:    Haskell2010

executable AdventThree
  hs-source-dirs:      src/Three
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , split
  default-language:    Haskell2010

executable AdventFour
  hs-source-dirs:      src/Four
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , split
  default-language:    Haskell2010

executable AdventFive
  hs-source-dirs:      src/Five
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , split
                     , cryptohash
                     , bytestring
                     , parallel
  default-language:    Haskell2010

executable AdventSix
  hs-source-dirs:      src/Six
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
  default-language:    Haskell2010

executable AdventSeven
  hs-source-dirs:      src/Seven
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , megaparsec
  default-language:    Haskell2010

executable AdventTwelve
  hs-source-dirs:      src/Twelve
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , megaparsec
                     , lens
  default-language:    Haskell2010

executable AdventSeventeen
  hs-source-dirs:      src/Seventeen
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , bytestring
                     , cryptohash
                     , array
  default-language:    Haskell2010

executable AdventEighteen
  hs-source-dirs:      src/Eighteen
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
  default-language:    Haskell2010

executable AdventNineteen
  hs-source-dirs:      src/Nineteen
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
  default-language:    Haskell2010

executable AdventTwenty
  hs-source-dirs:      src/Twenty
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , range
                     , megaparsec
  default-language:    Haskell2010

executable AdventTwentyThree
  hs-source-dirs:      src/TwentyThree
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -funbox-strict-fields
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , megaparsec
                     , lens
  default-language:    Haskell2010

executable AdventTwentyFive
  hs-source-dirs:      src/TwentyFive
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -funbox-strict-fields -Wall -Wno-missing-signatures -Wno-unused-do-bind
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , megaparsec
                     , lens
                     , parallel
  default-language:    Haskell2010

test-suite adventofcode2016-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       adventofcode2016
                     , base
                     , containers >= 0.5.7.1
                     , quickcheck-instances
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shapr/adventofcode2016
